# llms-from-scratch

./: README.md  pyproject.toml
notebooks/: working_with_text_data.ipynb
