[tool.poetry]
name = "building-llm-from-scratch"
version = "0.0.1-dev.1"
description = "Hands-on Buidling LLM from Scratch by Sebastian Raschka"
authors = ["syahrulhamdani <23093968+syahrulhamdani@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
